# wheel_legged_Robots

./: .gitignore  LICENSE  README.md  pyproject.toml
history_logs/wheel-legged-walking-v0.2.1/: cfgs.pkl  model_test.py  wheel_legged_env.py  wheel_legged_eval.py  wheel_legged_train.py
history_logs/wheel-legged-walking-v0.2.2/: cfgs.pkl  model_test.py  wheel_legged_env.py  wheel_legged_eval.py  wheel_legged_train.py
history_logs/wheel-legged-walking-v0.2.3/: cfgs.pkl  wheel_legged_env.py  wheel_legged_eval.py  wheel_legged_train.py
history_logs/wheel-legged-walking-v0.2.4/: cfgs.pkl  wheel_legged_env.py  wheel_legged_eval.py  wheel_legged_train.py
history_logs/wheel-legged-walking-v0.2.5/: cfgs.pkl  wheel_legged_env.py  (+1 more)
locomotion/: wheel_legged_eval.py
onnx/: pt2onnx.py
point_foot_loc/: point_foot_env.py  point_foot_eval.py  point_foot_train.py
sim2sim/: README.md  gs2mj.py  obs_save.py  scence.xml
sim2sim/cpp/: CMakeLists.txt  gs2mj.cpp
sim2sim/cpp/.cache/clangd/index/: gamepad.cpp.30C6FC7C1A464190.idx  gamepad.cpp.E23694BBA58FF1F9.idx  gamepad.h.0BE596DBC26A4C3B.idx  gamepad.h.4D5BF34DB2250BDC.idx  gamepadkey.h.249C984878B14294.idx  gamepadkey.h.57898A8C3528B4DA.idx  sim2sim.cpp.92895346EADC0DAE.idx  sim2sim.cpp.DADA51A556B1D898.idx  sim_cfg.h.02279AD642AC2535.idx  sim_cfg.h.DE2492D2115E8986.idx
sim2sim/cpp/include/: sim_cfg.h
sim2sim/cpp/usb_joystick/: .Module.symvers.cmd  .modules.order.cmd  .usb_joystick.ko.cmd  .usb_joystick.mod.cmd  .usb_joystick.mod.o.cmd  .usb_joystick.o.cmd  Makefile  install.sh  modules.order  usb_joystick.c  usb_joystick.ko  usb_joystick.mod.c
(+593 files in other folders)
